<resources>
    <string name="app_name">Movies</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">Tv shows</string>
    <string name="title_genres">Genres</string>
    <string name="title_discover">Discover</string>
    <string name="title_settings">Settings</string>
    <string name="nav_view_header">nav view header</string>

    <string name="title_now_playing">Now\nplaying</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top\nrated</string>
    <string name="title_latest">latest</string>
    <string name="title_up_coming">Up\ncoming</string>
    <string name="search">search</string>
    <string name="movie_poster">movie poster</string>
    <string name="connection_error">Connection error!</string>
    <string name="retry">retry</string>
    <string name="search_text_hint">Search</string>
    <string name="refresh">refresh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
