<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movies_navigation"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.andyprojects.movies.screens.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_moviesFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tvShowsFragment"
        android:name="com.andyprojects.movies.screens.tvShows.TvShowsFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_shows_tv">
        <action
            android:id="@+id/action_tvShowsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/genresFragment"
        android:name="com.andyprojects.movies.screens.genres.GenresFragment"
        android:label="@string/title_genres"
        tools:layout="@layout/fragment_genres">
        <action
            android:id="@+id/action_genresFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.andyprojects.movies.screens.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/action_discoverFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.andyprojects.movies.screens.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>